--- a/app/src/main/res/layout/fragment_calculate_expression_game.xml
+++ b/app/src/main/res/layout/fragment_calculate_expression_game.xml
@@ -189,7 +189,7 @@
                     app:cornerRadius="30dp" />
 
                 <Button
-                    android:id="@+id/ok_button"
+                    android:id="@+id/commit_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/purple_2"
